# dnsrelay

./: CMakeLists.txt  README.md  main.cpp  message.cpp  message.h  nameTable.cpp  nameTable.h  parser.cpp  parser.h  recordTable.cpp  recordTable.h  socketHeader.h  socketManager.cpp  socketManager.h
file/: cache.txt  debug.txt  dnsrelay.txt
lib/: message.h  nameTable.h  parser.h  recordTable.h  socketManager.h
report/: report.aux  report.tex
src/: main.cpp  message.cpp  nameTable.cpp  parser.cpp  recordTable.cpp  socketManager.cpp
